# codingame-template

./: CHANGELOG.md  PKGNAME.cabal
app/: Main.hs
