cabal-version:      2.4
name:               PKGNAME
version:            0.1.0.0
author:             AUTHNAME
maintainer:         EMAIL
extra-source-files: CHANGELOG.md

executable green-circle
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, attoparsec, bytestring, containers, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
